--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="D:/Uni Course related/SEF/gson/gson-2.8.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
